--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "node-sass": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.5"
   }
 }
